--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -44,7 +44,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>CreationCommande</servlet-name>
-    <url-pattern>/createCommand</url-pattern>
+    <url-pattern>/createCommande</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
